{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "5d6d64e8-1fe7-46ad-a57f-372a4bc25803",
            "actions": [
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "a1e8fb8d-06eb-4934-b73c-de6c9bbbfc2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "c1525989-42c3-4fac-85bc-f859bdf22718",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "130975c0-6bce-42b0-942d-b1ae696c2389",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36f7cdd6-02ee-4941-bb62-73c5655cb751",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}